--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -163,6 +163,7 @@ head
         float: none !important; 
       }
       #showLeft{
+         font-size:30px;
          color:white;
          margin-bottom:15px;
          margin-right: 15px;
@@ -205,8 +206,7 @@ head
                   a(id='regbutton' style='font-size:20px;border-radius:30px;') Регистрация
       .row(style='margin-top:100vh;text-align:right;width:100%;position:absolute;bottom:15px;')
         .col-xs-12
-          button(type='button' id='showLeft') 
-            span(class='glyphicon glyphicon-align-justify ')
+          span(id='showLeft'class='glyphicon glyphicon-align-justify ')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='/js/bootstrap.min.js')
     script.
