--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -177,6 +177,11 @@ head
       .row{
         margin:0px;
       }
+      @media screen and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) {
+        #provoutah{
+          margin-bottom:10%;
+        }
+      }
   body
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
       img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:20px;margin-bottom:20px;margin-left:auto;margin-right:auto;width:64px;height:64px;' alt="...")
