--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -179,7 +179,7 @@ head
       }
       @media screen and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) {
         #provoutah{
-          margin-bottom:10%;
+          margin-bottom:20%;
         }
       }
   body
@@ -189,7 +189,7 @@ head
       //button(type='button' id='showLeft') 
         //span(class='glyphicon glyphicon-align-justify ')
     .bckgrnd
-    .container(style='width:100%;padding-left:0px;padding-right:0px;')
+    .container(style='width:100%;padding-left:0px;padding-right:0px;text-align:center;')
       .row.padding15(id='provoutah')
         .col-xs-12
           h1(style='font-size:50px;') Organize your reading. 
