--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -179,6 +179,7 @@ head
       }
       @media screen and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) {
         #provoutah{
+          margin-top:5%;
           margin-bottom:20%;
         }
       }
